Fixed username on editProfile alignment

--- a/public/styles/EditProfile.scss
+++ b/public/styles/EditProfile.scss
@@ -125,9 +125,9 @@ flex: 0 1 300px !important;
   margin: 0 30px 0 150px;
 }
 
-.username {
+.editProfileUsername {
   align-items: center;
-  // display: flex;
+  display: flex;
   flex-direction: row;
   font-size: 24px;
   margin-top: 30px;
